# context-engine

./: .gitignore  CLAUDE.md  FINDINGS.md  README.md  bridge-session-1.md  bridge.py  context-bridge.md  context-engine.md  main.py  pyproject.toml  rlm_baseline.py  rlm_oolong.py
benchmarks/: oolong_trec_coarse.json  oolong_trec_coarse_30.json
context_engine/: __init__.py  __main__.py  composer.py  config.py  context_constructor.py
context_engine/providers/: __init__.py  base.py  openai_compat.py
examples/: basic_loop.py
tests/: test_step1.py
